# echo-app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
docker-mcp-registry/servers/echo-app/: server.yaml
echo_app/: __init__.py  main.py
