[project]
name = "echo-app"
version = "0.1.0"
description = "MCP server that provides tools for command-line arguments and environment variables"
authors = [
    {name = "Sualeh Fatehi",email = "sualeh@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
echo-app = "echo_app.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
